// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tooltip/Tooltip  1`] = `
.emotion-4 {
  position: relative;
  display: inline-block;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  position: absolute;
  display: none;
  width: 100%;
  z-index: 9999;
  -webkit-transition-property: opacity,-webkit-transform;
  -webkit-transition-property: opacity,transform;
  transition-property: opacity,transform;
  -webkit-transition-duration: 250ms;
  transition-duration: 250ms;
  -webkit-transition-timing-function: cubic-bezier(0.77,0,0.265,2);
  transition-timing-function: cubic-bezier(0.77,0,0.265,2);
  touch-action: auto;
  pointer-events: auto;
  opacity: 1;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.emotion-1 polygon:first-child {
  fill: #393939;
}

.emotion-1 polygon:last-child {
  fill: #393939;
}

<div
  className="emotion-4 hig__flyout-v1--hidden hig__flyout-v1--top-left"
>
  <div
    className="emotion-0 hig__flyout-v1__action"
  />
  <div
    className="emotion-3 hig__flyout-v1__container"
    style={
      Object {
        "left": "0px",
        "top": "0px",
      }
    }
  >
    <div
      aria-hidden="true"
      className="emotion-2 hig__flyout-v1__pointer-wrapper"
      role="presentation"
      style={
        Object {
          "left": "0px",
          "top": "0px",
        }
      }
    >
      <svg
        className="emotion-1"
        height="12"
        viewBox="0 0 12 12"
        width="12"
      >
        <polygon
          points="0,6 6,0 12,6"
        />
        <polygon
          points="2.5,6 6,2.5 9.5,6"
        />
      </svg>
    </div>
    <div
      className="hig__tooltip-v1__panel"
      onScroll={undefined}
      style={
        Object {
          "maxHeight": undefined,
        }
      }
    >
      <div
        className="hig__tooltip-v1__panel__inner"
      />
    </div>
  </div>
</div>
`;

exports[`tooltip/Tooltip  2`] = `
.emotion-4 {
  position: relative;
  display: inline-block;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.emotion-1 polygon:first-child {
  fill: #393939;
}

.emotion-1 polygon:last-child {
  fill: #393939;
}

.emotion-3 {
  position: absolute;
  display: table;
  width: 100%;
  z-index: 9999;
  -webkit-transition-property: opacity,-webkit-transform;
  -webkit-transition-property: opacity,transform;
  transition-property: opacity,transform;
  -webkit-transition-duration: 250ms;
  transition-duration: 250ms;
  -webkit-transition-timing-function: cubic-bezier(0.77,0,0.265,2);
  transition-timing-function: cubic-bezier(0.77,0,0.265,2);
  touch-action: auto;
  pointer-events: auto;
  opacity: 1;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
}

<div
  className="emotion-4 hig__flyout-v1--top-left"
>
  <div
    className="emotion-0 hig__flyout-v1__action"
  >
    <button
      className="hig--light-theme hig__button-v1 hig__button-v1--size-standard hig__button-v1--type-primary hig__button-v1--width-shrink"
      href={undefined}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={undefined}
      tabIndex="0"
      target={undefined}
    >
      <span
        className="hig__button__title"
      >
        Click Me
      </span>
    </button>
  </div>
  <div
    className="emotion-3 hig__flyout-v1__container"
    style={
      Object {
        "left": "0px",
        "top": "0px",
      }
    }
  >
    <div
      aria-hidden="true"
      className="emotion-2 hig__flyout-v1__pointer-wrapper"
      role="presentation"
      style={
        Object {
          "left": "0px",
          "top": "0px",
        }
      }
    >
      <svg
        className="emotion-1"
        height="12"
        viewBox="0 0 12 12"
        width="12"
      >
        <polygon
          points="0,6 6,0 12,6"
        />
        <polygon
          points="2.5,6 6,2.5 9.5,6"
        />
      </svg>
    </div>
    <div
      className="hig__tooltip-v1__panel"
      onScroll={[Function]}
      style={
        Object {
          "maxHeight": "150px",
        }
      }
    >
      <div
        className="hig__tooltip-v1__panel__inner"
      >
        Hello World
      </div>
    </div>
  </div>
</div>
`;
